Airflow/logs/dag_id=games/run_id=manual__2024-05-21T18:41:32.962162+00:00/task_id=load_data/attempt=1.log
[2024-05-21T18:45:40.992+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-21T18:45:41.006+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: games.load_data manual__2024-05-21T18:41:32.962162+00:00 [queued]>
[2024-05-21T18:45:41.010+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: games.load_data manual__2024-05-21T18:41:32.962162+00:00 [queued]>
[2024-05-21T18:45:41.010+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 1
[2024-05-21T18:45:41.018+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): load_data> on 2024-05-21 18:41:32.962162+00:00
[2024-05-21T18:45:41.025+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=128) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-21T18:45:41.026+0000] {standard_task_runner.py:63} INFO - Started process 130 to run task
[2024-05-21T18:45:41.026+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'games', 'load_data', 'manual__2024-05-21T18:41:32.962162+00:00', '--job-id', '552', '--raw', '--subdir', 'DAGS_FOLDER/get_main_games.py', '--cfg-path', '/tmp/tmpnqgvjf11']
[2024-05-21T18:45:41.028+0000] {standard_task_runner.py:91} INFO - Job 552: Subtask load_data
[2024-05-21T18:45:41.055+0000] {task_command.py:426} INFO - Running <TaskInstance: games.load_data manual__2024-05-21T18:41:32.962162+00:00 [running]> on host 8bf53c205e4b
[2024-05-21T18:45:41.109+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='games' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2024-05-21T18:41:32.962162+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-21T18:41:32.962162+00:00'
[2024-05-21T18:45:41.109+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-21T18:45:41.148+0000] {base.py:84} INFO - Using connection ID '***' for task execution.
[2024-05-21T18:45:41.600+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-21T18:45:41.600+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/plugins/steps/get_matches.py", line 156, in load_data
    hook.insert_rows(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 573, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: syntax error at or near "0"
LINE 1: INSERT INTO games (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,...
                           ^

[2024-05-21T18:45:41.608+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=games, task_id=load_data, execution_date=20240521T184132, start_date=20240521T184541, end_date=20240521T184541
[2024-05-21T18:45:41.621+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 552 for task load_data (syntax error at or near "0"
LINE 1: INSERT INTO games (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,...
                           ^
; 130)
[2024-05-21T18:45:41.640+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-21T18:45:41.653+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-21T18:45:41.653+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
